Fix some PL spacing issues

--- a/src/components/App/styles.scss
+++ b/src/components/App/styles.scss
@@ -9,6 +9,7 @@
   color: #000;
   text-align: center;
   padding: 20px;
+  margin: 1rem 0;
 }
 
 .title {
@@ -52,5 +53,6 @@
   margin: 0;
   position: relative;
   top: 1em;
+  line-height: normal;
   font-size: 0.8rem;
 }
